# AbsBox

./: .gitignore  .readthedocs.yaml  0.20.x swap.ipynb  0.20.x trigger.ipynb  0.22 bond pricing.ipynb  0.22 loan.ipynb  0.22 test.ipynb  0.22.x waterfall inspect.ipynb  0.23.x bond step up.ipynb  0.23.x rateCap.ipynb  0.24.2 AYH.ipynb  0.24.2 review.ipynb  0.25.0-accrue-int-override.ipynb  0.25.0.ipynb  0.25.1-YSOC.ipynb  0.25.1-cn-test-7.ipynb  0.25.1-cn.ipynb  0.25.1.ipynb  0.25.2_makeWhole.ipynb  0.26.1 Bond Rate .ipynb  0.26.2 Receivables.ipynb  0.26.5 Test.ipynb  0.26.8 trigger.ipynb  0.27.x Pool Test.ipynb  0.28 AYH.x AYH.ipynb  0.28.2 Trigger with waterfall actions.ipynb  0.29.2 ObligorTag.ipynb  0.29.3 ObligorField.ipynb  0.29.3 Refinance Rate.ipynb  0.29.5 multi run assumption.ipynb  0.29.x data_rpt_fetch.ipynb  0.42.0_debug.ipynb  ABS Model v4 - Test.ipynb  AccountSetup.ipynb  AdjustRate.ipynb  AggByWeek.ipynb  Asset Pricing.ipynb  BondScheduleByPeriod.ipynb  Build Bench Case.ipynb  ByTerm Example.ipynb  (+264 more)
.github/workflow/: main.yml  publish_pypi.yml
.github/workflows/: python-app.yml  python-publish.yml
_history_changes/: 74.enhance.rst  75.removed.1.rst  75.removed.rst
absbox/: PyABS.code-workspace  __init__.py  client test.ipynb  client.py  deal.py  exception.py  library.py  portfolio.py  report.py  rootFinder.py  validation.py
absbox/byTypes/: cmo.py  passthroughs.py
absbox/examples/: __init__.py  base.py  baseCase.py  mixAssetType.py  triggerCase.py
absbox/local/: __init__  absbox.work.code-workspace  analytics.py  base.py  cf.py  chart.py  china.py  cmp.py  component.py  generic.py  interface.py  plot.py  tui.py  util.py
absbox/report_parser/: china.py
absbox/tests/: __init__.py  clean_benchmark.sh  config.json  releaseChecker.py  run_cases.txt  runner.py  test_case.txt  test_cn_regression.py  test_nb_regression.py  test_regression.py
absbox/tests/benchmark/: __init__.py
absbox/tests/benchmark/china/: __init__.py  regression.csv  test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08.py  test09.py  test10.py  test11.py  test12.py  test13.py  test14.py  test15.py  test16.py  test17.py  test18.py  test19.py  test20.py  test21.py  test22.py  test23.py  test24.py  test25.py
absbox/tests/benchmark/china/resp/: test01.out.json  test02.out.json  test03.out.json  test04.out.json  test05.out.json  test06.out.json  test07.out.json  test08.out.json  test09.out.json  test10.out.json  test11.out.json  test12.out.json  test13.out.json  test14.out.json  test15.out.json  test16.out.json  test17.out.json  test18.out.json  test19.out.json  test20.out.json  test21.out.json  test23.out.json  test24.out.json  test25.out.json
absbox/tests/benchmark/china/scenario/: bmwRevolving.json  defaults01.json  empty.json  loan_empty.json  mortgage_empty.json  rates.json
absbox/tests/benchmark/us/: __init__.py  arm_sample.py  float_bond.py  stepup_sample.py  test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08.py
absbox/tests/benchmark/us/resp/: test01.out.json  test02.out.json  test03.out.json  test04.out.json  test05.out.json  test06.out.json  test07.out.json
absbox/tests/benchmark/us/scenario/: bmwRevolving.json  rates.json
absbox/tests/regression/: assets.py  deals.py  main.py  pool.py  test_main.py
docs/: requirements.txt
docs/source/: Hastructure.code-workspace  analytics.rst  api.rst  changelog.rst  conf.py  faq.rst  gallery.rst  howto.rst  index.rst  installation.rst  library.rst  modeling.rst  nbsample.ipynb  reference.rst  support.rst
docs/source/deal_sample/: __init__.py  bondStepUp.py  book.py  conditionAgg.py  fee1.py  fireTrigger.py  float_bond.py  multi_pool.py  payPrinSeq.py  rateCap.py  resec.py  stepup_sample.py  structuring_sample.py  test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08.py  test09.py  test10.py  test11.py  test12.py  test13.py  ysoc.py
docs/source/files/: U90133_3132H3EE9_COLLAT_CURRENT.txt
docs/source/nbsample/: AccountSetup.ipynb  BondScheduleByPeriod.ipynb  DistillWaterfall.ipynb  EDML_BLUE_2024.ipynb  FeeFlowByIndex.ipynb  How-to-price-Balloon-Mortgage.ipynb  HowDealEnded.ipynb  IC_Test.ipynb  InspectSample.ipynb  IntOverIntExample.ipynb  IntroWaterfall.ipynb  Irr_001.ipynb  Irr_002.ipynb  MultiIntBond.ipynb  MultiRunAssumption.ipynb  ObligorField.ipynb  ObligorTag.ipynb  PoolAndTag.ipynb  Refinance_Rate.ipynb  SRT_Example_Native_Prod.ipynb  TriggerByPeriod.ipynb  TriggerWithWaterfallActions.ipynb  WhyByTerm.ipynb  assumption.rst  bond_pricing.ipynb  comboSensitivity.ipynb  deal_basic.ipynb  debugExamples.rst  debug_sample.ipynb  firstLoss.ipynb  howToModelDealComponents.rst  index.rst  library_example.ipynb  masterTrust.ipynb  modelAccount.ipynb  modelExamples.rst  multiAsset.ipynb  pool_multiScenario.ipynb  pool_sample1.ipynb  pool_sample2.ipynb  (+25 more)
newsfragments/: 1.added.rst
pyabs/: __init__.py  asset.py  client.py  common.py  pyabs.py
pyabs/local/: __init__  china.py
