[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.24.2"
name = "absbox"
description = "an analytical library for cashflow modeling on ABS/MBS products"
readme = "README.md"
requires-python = ">=3.10"
license = {file="LICENSE"}
authors = [
  {email = "always.zhang@gmail.com"},
  {name = "xiaoyu, zhang"}
]
classifiers = [
    "Development Status :: 4 - Beta"
    ,"Environment :: Console"
    ,"Intended Audience :: Developers"
    ,"Intended Audience :: Financial and Insurance Industry"
    ,"Topic :: Software Development :: Build Tools"
    ,"Topic :: Software Development :: Libraries"
    ,"License :: OSI Approved :: MIT License"
]

dependencies = [
    "pandas ==1.4.3",
    "numpy ==1.23.1",
    "matplotlib",
    "requests",
    "rich",
    "pyxirr",
    "lenses",
    "pyspecter",
    "graphviz"
]

[project.urls]
homepage = "https://absbox.org"
documentation = "https://absbox-doc.readthedocs.io/en/latest/"
repository = "https://github.com/yellowbean/AbsBox/"




[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "absbox/tests",
]

[project.optional-dependencies]
test = [
    "pytest",
    "jsondiff",
    "deepdiff",
]
