[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "absbox"
description = "an analytical library for cashflow modeling on ABS/MBS products"
readme = "README.md"
requires-python = ">=3.10"
license = {file="LICENSE"}
authors = [
  {email = "always.zhang@gmail.com"},
  {name = "xiaoyu, zhang"}
]
classifiers = [
    "Development Status :: 4 - Beta"
    ,"Environment :: Console"
    ,"Intended Audience :: Developers"
    ,"Intended Audience :: Financial and Insurance Industry"
    ,"Topic :: Software Development :: Build Tools"
    ,"Topic :: Software Development :: Libraries"
    ,"License :: OSI Approved :: MIT License"
]

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "requests",
    "toolz",
    "rich",
    "lenses",
    "graphviz",
    "schema",
    "dateparser",
    "pyxirr",
    "more-itertools"
]

keywords = ["cashflow", "abs", "mbs", "cashflow model", "rmbs" ,"clo", "cashflow engine","structuring", "srt"]

[project.urls]
homepage = "https://absbox.org"
documentation = "https://absbox-doc.readthedocs.io/en/latest/"
repository = "https://github.com/yellowbean/AbsBox/"
changelog = "https://github.com/yellowbean/AbsBox/blob/main/CHANGELOG.rst"




[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --color=yes  --import-mode=importlib"

testpaths = [
    "absbox/tests",
    "docs/source/nbsample"
]

pythonpath = "/Users/xiaoyu/Projects/PyABS"

[project.optional-dependencies]
test = [
    "pytest",
    "jsondiff",
    "deepdiff",
    "ipykernel",
    "pytest-notebook"
]

[tool.towncrier]
directory = "changes"
name = "Absbox"
filename = "CHANGELOG.rst"

start_string = ".. towncrier release notes start\n"
underlines = ["-", "~", "\""]
title_format = "`{version} <https://github.com/yellowbean/AbsBox/tree/{version}>`_ - {project_date}"
issue_format = "`{issue} <https://github.com/yellowbean/AbsBox/issues/{issue}>`_"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "performance"
name = "Performance"
showcontent = true


[[tool.towncrier.type]]
directory = "enhance"
name = "Enhance"
showcontent = true