[metadata]
name = absbox
version = 0.23.3
description-file = README.md
author = xiaoyu, zhang
author_email = always.zhang@gmail.com
url = https://github.com/yellowbean/PyABS
download_url = https://github.com/yellowbean/AbsBox/archive/refs/tags/v0.14.10.tar.gz
description =  an analytical library for cashflow modeling on ABS/MBS products
long_description_content_type = text/markdown
long_description = file: README.md
keywords = MBS, ABS, Modelling, StructuredFinance, Cashflow
license = Apache
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
package_dir = 
packages = 
    absbox
    absbox.local
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires =
    requests
    pandas
    pyxirr
    matplotlib
    pyspecter
    numpy
    pytest
    jsondiff
    deepdiff
   
