[metadata]
name = absbox
version = 0.29.3
description_file = README.md
author = xiaoyu, zhang
author_email = always.zhang@gmail.com
url = https://github.com/yellowbean/PyABS
download_url = https://github.com/yellowbean/AbsBox/archive/refs/heads/main.zip
description =  an analytical library for cashflow modeling on ABS/MBS/SRT products
long_description_content_type = text/markdown
long_description = file: README.md
keywords = MBS, ABS, Modelling, StructuredFinance, Cashflow, SRT
license = Apache
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
package_dir = 
packages = 
    absbox
    absbox.local
    absbox.examples
    absbox.report_parser
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires =
    requests
    pandas
    matplotlib
    toolz
    rich
    schema
    numpy
    pytest
    jsondiff
    deepdiff
    dateparser
    more-itertools
    pyxirr
    lenses

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    absbox/tests
    docs/source/nbsample